# hackathone-2-all-phases-

./: .gitignore  hackathon2.md  railway.json
phase-1-console/: .gitignore  README.md  pyproject.toml
phase-1-console/history/: 001-create-phase1-specification.spec.prompt.md  002-clarify-phase1-spec.spec.prompt.md  003-create-implementation-plan.plan.prompt.md  004-generate-task-breakdown.tasks.prompt.md
phase-1-console/specs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1-console/specs/checklists/: requirements.md
phase-1-console/src/todo/: __init__.py  __main__.py  cli.py  models.py  storage.py  ui.py  validators.py
phase-1-console/tests/: __init__.py  conftest.py
phase-1-console/tests/integration/: __init__.py
phase-1-console/tests/unit/: __init__.py
phase-2-web/backend/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
phase-2-web/frontend/: .env.local  package-lock.json  package.json  tailwind.config.ts  vercel.json
phase-2-web/history/: 001-setup-phase-2-structure.spec.prompt.md  002-expand-phase-2-spec.spec.prompt.md  003-phase-2-planning.plan.prompt.md  005-phase-2-tasks.tasks.prompt.md  006-phase-2-setup-implementation.misc.prompt.md  007-phase-2-foundational-implementation.misc.prompt.md  008-phase-2-us1-backend-implementation.misc.prompt.md  009-phase-2-us1-frontend-implementation.misc.prompt.md  010-phase-2-us2-backend-implementation.misc.prompt.md  011-phase-2-us2-frontend-implementation.misc.prompt.md  012-phase-2-us3-theme-implementation.misc.prompt.md  (+1 more)
phase-2-web/specs/: plan.md  (+5 more)
(+22 files in other folders)
